Fixes #5832, #5853 document categories
Exposes a code system and value set endpoint for grabbing the
heirarchical list of categories for the documents.

Adds the categories with the OpenEMR code system to the
DocumentReference endpoint.
